wrote blog. Will double check, but mostly done

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>
 
                         <img src="images/acuity_logo.png" alt>
-                        <a class="down-arrow" onclick="show_blog_info(this, 362)">
+                        <a class="down-arrow" onclick="show_blog_info(this, 862)">
                             <div class="h-divider"></div>
                             <ion-icon name="chevron-down-outline"></ion-icon>
                         </a>
@@ -52,23 +52,39 @@
                         <div class="h-divider"></div>
                         <div class="title-text"> Introduction </div>
                         <p>
-                            I had the pleasure of working at AcuityAds from September 2020 until January 2021
+                            I had the pleasure of working at AcuityAds from September 2020 until January 2021 as an Engineering Intern in the backend and product support team.
+                            This blog gives a brief overview of my position at this company.
                         </p>
                         <div class="title-text"> About AcuityAds </div>
                         <p>
-                            Test hello
+                            AcuityAds is a leading technology company that provides marketers a one-stop solution for digital advertising.
+                            The company brings an integrated ecosystem of privacy-protected data, inventory, brand safety and fraud prevention partners.
+                            AcuityAds offers an extensive UI to simplify the client's marketing experience and fulfill all of their needs.
+                            While I was working at AcuityAds, their stock price rose by over 700%, and they are developing technology that is at the forefront of the digital marketing field.
+                            AcuityAds has several offices around the world, but I worked at their Toronto headquarters as well as remotely for the duration of my internship.
                         </p>
                         <div class="title-text"> Goals </div>
                         <p>
-                            Test hello
+                            I had a couple goals this work term, two main ones, one of which was gaining experience in a team setting, and the other was to gain experience
+                            with modern software. I was able to achieve both of these goals and gain more experience than I had originally hoped, getting experience with Docker,
+                            Grafana, InfluxDB, MySQL, ELK Stack, Auth0, and most of all Kubernetes and Django.<br>
+                            <br>
+                            A goal I developed during my term was getting comfortable with MySQL, since I had to use it at my job and had no prior experience due to CIS*2750 being cut short because of COVID-19.
+                            I taught myself MySQL outside of work by developing a python bot to manage a private chat forum.<br>
+                            <br>
+                            I didn't have too many specific goals to the skills or technologies I wanted to work with, as each job and position is different. I was very happy with
+                            what I learned.
                         </p>
                         <div class="title-text"> Job Description </div>
                         <p>
-                            Test hello
+                            My job as an Engineering Intern for the first two weeks consisted of converting designing a pattern matching algorithm in python and automating it on schedule.
+                            After this, I was tasked with spearheading an internal portal to simplify many internal backend tasks. This was written in Django, being hosted on Kubernetes with a Percona
+                            middleware to connect separate pods with the main web server. I was also given frequent tickets to help with smaller scripting tasks here and there, where interacted with
+                            several time series databases, and other servers.
                         </p>
                         <div class="title-text"> Conclusion </div>
                         <p class="final-p">
-                            Test hello
+                            In conclusion, I am very pleased with my experience at AcuityAds and couldnt have wished for a better co-op.
                         </p>
                         <div class="up-arrow" onclick="hide_blog_info(this)">
                             <div class="h-divider"></div>
