--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
         <title>Chris Walker</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet">
-        <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
-
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="css/script.js"></script>
     </head>
@@ -42,10 +40,10 @@
                             </div>
                         </div>
 
-                        <img src="images/acuity_logo.png" alt>
+                        <img class="blog-image" src="images/acuity_logo.png" alt>
                         <a class="down-arrow" onclick="show_blog_info(this, 862)">
                             <div class="h-divider"></div>
-                            <ion-icon name="chevron-down-outline"></ion-icon>
+                            <img src="images/down_arrow.png" width="32px" height="32px">
                         </a>
                     </div>
                     <div class="blog-info">
@@ -88,7 +86,7 @@
                         </p>
                         <div class="up-arrow" onclick="hide_blog_info(this)">
                             <div class="h-divider"></div>
-                            <ion-icon name="chevron-up-outline"></ion-icon>
+                            <img src="images/up_arrow.png" width="32px" height="32px">
                         </div>
                     </div>
                 </div>
