--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </div>
 
                         <img class="blog-image" src="images/acuity_logo.png" alt>
-                        <a class="down-arrow" onclick="show_blog_info(this, 862)">
+                        <a class="down-arrow" onclick="show_blog_info(this)">
                             <div class="h-divider"></div>
                             <img src="images/down_arrow.png" width="32px" height="32px">
                         </a>
