added some more fields

--- a/index.html
+++ b/index.html
@@ -80,9 +80,19 @@
                             middleware to connect separate pods with the main web server. I was also given frequent tickets to help with smaller scripting tasks here and there, where interacted with
                             several time series databases, and other servers.
                         </p>
+                        <div class="title-text"> How does this job relate to your academic studies? </div>
+                        <p>
+                            Unfortunately there was not much overlap with my academic studies and my job, as the grand majority of my job was Python and Kubernetes.
+                            There were a few small things, such as Express and SQL (had CIS*2750 not been cut short) which did overlap, but they were very small parts of my job.
+                            This is almost exactly what I had been expecting, since school courses don't often go into detail about specific parts of computer science, but principles as a whole.
+                        </p>
                         <div class="title-text"> Conclusion </div>
-                        <p class="final-p">
+                        <p>
                             In conclusion, I am very pleased with my experience at AcuityAds and couldnt have wished for a better co-op.
+                        </p>
+                        <div class="title-text"> Acknowledgments </div>
+                        <p class="final-p">
+                            I would like to thank my supervisor and coworkers for making my time at Acuity so enjoyable and beneficial towards my future.
                         </p>
                         <div class="up-arrow" onclick="hide_blog_info(this)">
                             <div class="h-divider"></div>
