--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
                         <div class="title-text"> How does this job relate to your academic studies? </div>
                         <p>
                             Unfortunately there was not much overlap with my academic studies and my job, as the grand majority of my job was Python and Kubernetes.
-                            There were a few small things, such as Express and SQL (had CIS*2750 not been cut short) which did overlap, but they were very small parts of my job.
-                            This is almost exactly what I had been expecting, since school courses don't often go into detail about specific parts of computer science, but principles as a whole.
+                            There were a few small things, such as Express (and SQL, had CIS*2750 not been cut short) which did overlap, but they were very small parts of my job.
+                            This is almost exactly what I had been expecting since school courses don't often go into detail about specific parts of computer science, but principles as a whole.
                         </p>
                         <div class="title-text"> Conclusion </div>
                         <p>
-                            In conclusion, I am very pleased with my experience at AcuityAds and couldnt have wished for a better co-op.
+                            In conclusion, I am very pleased with my experience at AcuityAds and couldnt have wished for a better first co-op.
                         </p>
                         <div class="title-text"> Acknowledgments </div>
                         <p class="final-p">
