--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                         </p>
                         <div class="title-text"> Job Description </div>
                         <p>
-                            My job as an Engineering Intern for the first two weeks consisted of converting designing a pattern matching algorithm in python and automating it on schedule.
+                            My job as an Engineering Intern for the first two weeks consisted of converting php, and designing a pattern matching algorithm in python, as well as automating it on a schedule.
                             After this, I was tasked with spearheading an internal portal to simplify many internal backend tasks. This was written in Django, being hosted on Kubernetes with a Percona
-                            middleware to connect separate pods with the main web server. I was also given frequent tickets to help with smaller scripting tasks here and there, where interacted with
+                            middleware to connect separate pods with the main web server. I was also given frequent tickets to help with smaller scripting tasks here and there, which interacted with
                             several time series databases, and other servers.
                         </p>
                         <div class="title-text"> How does this job relate to your academic studies? </div>
