added oracle coop

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                 Sept 2020 - Jan 2021
                             </div>
                             <div class="blog-position">
-                                Engineering Intern
+                                Software Developer Intern
                             </div>
                         </div>
 
@@ -93,6 +93,77 @@
                         <div class="title-text"> Acknowledgments </div>
                         <p class="final-p">
                             I would like to thank my supervisor and coworkers for making my time at Acuity so enjoyable and beneficial towards my future.
+                        </p>
+                        <div class="up-arrow" onclick="hide_blog_info(this)">
+                            <div class="h-divider"></div>
+                            <img src="images/up_arrow.png" width="32px" height="32px">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="blogpost">
+                    <div class="blog-title">
+
+                        <div class="blog-title-details">
+                            <div class="blog-date">
+                                May 2021 - Aug 2021
+                            </div>
+                            <div class="blog-position">
+                                Software Developer Intern
+                            </div>
+                        </div>
+
+                        <img class="blog-image" src="images/oracle_logo.png" alt>
+                        <a class="down-arrow" onclick="show_blog_info(this)">
+                            <div class="h-divider"></div>
+                            <img src="images/down_arrow.png" width="32px" height="32px">
+                        </a>
+                    </div>
+                    <div class="blog-info">
+                        <div class="h-divider"></div>
+                        <div class="title-text"> Introduction </div>
+                        <p>
+                            I had the pleasure of working at Oracle from May 2021 until August 2021 as a Software Developer Intern as a part of the NetSuite department.
+                            This blog gives a brief overview of my position at this company.
+                        </p>
+                        <div class="title-text"> About Oracle </div>
+                        <p>
+                            Oracle is an American multinational computer technology corporation headquartered in Austin, Texas.
+                            Oracle sells database software and technology, cloud engineered systems, and enterprise software products - particularly its own brands of database management systems.
+                            In 2020, Oracle was the second-largest software company in the world by revenue and market capitalization.
+                            The company also develops and builds tools for database development and systems of middle-tier software, Enterprise Resource Planning (ERP) software,
+                            Human Capital Management (HCM) software, Customer Relationship Management (CRM) software (AKA customer experience),
+                            Enterprise Performance Management (EPM) software, and Supply Chain Management (SCM) software.
+                        </p>
+                        <div class="title-text"> Goals </div>
+                        <p>
+                            I had a couple goals this work term, two main ones, one of which was getting better at overall communication, and the other was to gain more experience overall.
+                            I was able to achieve both of these goals, as I worked more with Python and multiprocessing, as well as Jet, a React-like framework, the latter of which many modern
+                            companies use today.<br>
+                            <br>
+                            I didn't have too many specific goals to the skills or technologies I wanted to work with, as each job and position is different. I was very happy with
+                            what I learned.
+                        </p>
+                        <div class="title-text"> Job Description </div>
+                        <p>
+                            My job as an Engineering Intern for the first month consisted of refactoring old scripts and implemented multiprocessing in important and time-heavy scripts.
+                            After this, I was tasked with leading an internal migration for a technology stack that consisted of SpringBoot and raw JS,HTML,CSS to a technology stack that had
+                            Jet as the frontend framework. This task consisted of rewriting many JS and HTML files, as well as adding endpoints and promises to enable the frontend and backend to
+                            be able to communicate. I also led the development of the new UI for this internal tool.
+                        </p>
+                        <div class="title-text"> How does this job relate to your academic studies? </div>
+                        <p>
+                            Unfortunately there was not much overlap with my academic studies and my job, as the grand majority of my job was Python and Jet.
+                            There were a few small things, such as endpoints and multiprocessing which did overlap, but they were very small parts of my job.
+                            This is almost exactly what I had been expecting since school courses don't often go into detail about specific parts of computer science, but principles as a whole.
+                        </p>
+                        <div class="title-text"> Conclusion </div>
+                        <p>
+                            In conclusion, I am very pleased with my experience at Oracle and couldn't have wished for a better second co-op.
+                        </p>
+                        <div class="title-text"> Acknowledgments </div>
+                        <p class="final-p">
+                            I would like to thank my supervisor and coworkers for making my time at Oracle so enjoyable and beneficial towards my future.
                         </p>
                         <div class="up-arrow" onclick="hide_blog_info(this)">
                             <div class="h-divider"></div>
